2008-05-07  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/extensions/forcefielddialog.*: Removed gradients
	option. Now handled OBForceField::HasAnalyticalGradients()

	* libavogadro/src/extensions/conformersearchdialog.*: Same.
	
	* libavogadro/src/extensions/forcefieldextension.*: Same.

	* libavogadro/src/extensions/constraintsdialog.*: Update for static
	constraints. We now only need to set it once.

	* libavogadro/src/tools/autoopttool.*: Replaced convergence spin box
	by steps per update spin box.

2008-05-05  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.*: Set the navigate tool
	as the active tool after loading a file.

2008-05-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/drawtool.cpp: Added saving of the current
	element to the draw tool.

	* libavogadro/src/tools/autoopttool.cpp: Add checks in for whether the
	force field was initialised correctly.

	* libavogadro/src/engines/orbitalengine.*: More updates to the orbital
	engine to improve rendering consistency.

	* libavogadro/src/extensions/orbitalextension.cpp: Fixed another
	crasher - when no basis set has been loaded.

2008-05-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitalextension.cpp: Corrected the MO
	numbering in the cube titles.

	* libavogadro/src/engines/orbitalengine.*: Added some settings
	persistence, improved the quickRender a little too.

	* libavogadro/src/tools/clickmeasuretool.*: More guarded pointers to
	prevent crashing caused by dangling pointers.

	* libavogadro/src/glwidget.cpp: Only switch to quickRender on mouse
	move, not press.

	* libavogadro/src/tools/aligntool.*: Used guarded pointers (QPointer)
	to make the align tool much harder to crash.

2008-05-02  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitaldialog.*,
	libavogadro/src/extensions/orbitalextension.*: Adding some extra